--- a/bistro/index.html
+++ b/bistro/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Black Goose Bistro</title>
 	<style>
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
 	body {
 	background-color: #dbf3fa;
 	margin: 0 10%;
@@ -29,7 +30,7 @@
 <body>
 <h2>The Restaurant</h2>
 <p>The <em>Black Goose Bistro</em> offers casual lunch and dinner fare in a relaxed atmosphere. 
-<br>The menu changes regularly to highligh the freshest local ingredients.</p>
+<br>The menu changes regularly to highlight the freshest local ingredients.</p>
 
 <h3>Catering</h3>
 <p>You have fun, <em>we'll handle the cooking.</em> <br> <em>Black Goose Bistro</em> can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
