--- a/bistro/index.html
+++ b/bistro/index.html
@@ -23,7 +23,14 @@
 	color: #d1633c;
 	font-size: 2em;
 	}
+	h3 {
+	font-size: 1em;
+	}
+	h4 {
+	font-size: 1em;
+	}
 	</style>
+	
 </head>
 <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
