--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -3,11 +3,38 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Black Goose Bistro News</title>
+		<style>
+	@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
+		body {
+		background-color: #dbf3fa;
+		margin: 0 10%;
+		font-family: source sans pro;
+		}
+		h1 {
+		text-align: center;
+		font-family: serif;
+		font-weight: normal;
+		text-transform: uppercase;
+		border-bottom: 3px solid #d1633c;
+		margin-top: 30px;
+		}
+		h2 {
+		color: #d1633c;
+		font-size: 2em;
+		}
+		h3 {
+		font-size: 1em;
+		}
+		h4 {
+		font-size: 1em;
+		}
+		</style>
 	</head>
 <body>
 <header>
-<h1>The Black Goose Bistro News</h1><nav><ul>
-	<li>Home	<li>Menu	<li>News	<li>Contact
+<h1>The Black Goose Bistro News</h1><nav>
+	<h3><ul>
+	<li><a href="index.html">Home</a>		<li><a href="bgnews.html">News</a>	<li><a href="about.html">About</a></h3>
 </ul>
 </nav>
 </header><article>
@@ -15,7 +42,7 @@
 <h3>Appetizers</h3><dl>
 <dt>Black bean purses</dt>	<dd>Spicy black bean and a blend of Mexican cheeses wrapped in sheets of phyl-lo and baked until golden. <span class="price">$3.95</span>
 	</dd>
-	
+
 <dt class="newitem">Southwestern napoleons with lump crab <strong>&mdash; new item!</strong></dt><dd>Layers of light lump crab meat, bean and corn salsa, and our handmade flour tortillas. <span class="price">$7.95</span>
 </dd>
 </dl></section>
