--- a/bistro/index.html
+++ b/bistro/index.html
@@ -36,7 +36,7 @@
 
 <body>
 	<h3><ul>
-		<li><a href="recipes/salmon.html">Recipes</a>
+		<li><a href="recipes/salmon.html"Recipes</a>
 		<li><a href="bgnews.html">News</a>
 		<li><a href="about.html">About</a>
 		<li><a href="glossary.html" target="_blank">Glossary</a>
@@ -60,7 +60,7 @@
 </ul>
 <h2>From Jen&rsquo;s Cookbook</h2>
 	<ul>
-		<li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</li>
+		<li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
 		<li><a href="recipes/salmon.html">Garlic Salmon</a></li>
 		<li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
 		<li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
