--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
 	<meta charset="utf-8">
 	<title>Black Goose Bistro</title>
 	<style>
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
 	body {
 	background-color: #dbf3fa;
 	margin: 0 10%;
@@ -22,14 +23,27 @@
 	color: #d1633c;
 	font-size: 2em;
 	}
+	h3 {
+	font-size: 1em;
+	}
+	h4 {
+	font-size: 1em;
+	}
 	</style>
+
 </head>
 <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
 <body>
+	<h3><ul>
+		<li><a href="recipes/salmon.html"Recipes</a>
+		<li><a href="bgnews.html">News</a>
+		<li><a href="about.html">About</a>
+		<li><a href="glossary.html" target="_blank">Glossary</a>
+	</ul></h3>
 <h2>The Restaurant</h2>
-<p>The <em>Black Goose Bistro</em> offers casual lunch and dinner fare in a relaxed atmosphere. 
-<br>The menu changes regularly to highligh the freshest local ingredients.</p>
+<p>The <em>Black Goose Bistro</em> offers casual lunch and dinner fare in a relaxed atmosphere.
+<br>The menu changes regularly to highlight the freshest local ingredients.</p>
 
 <h3>Catering</h3>
 <p>You have fun, <em>we'll handle the cooking.</em> <br> <em>Black Goose Bistro</em> can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
@@ -39,5 +53,18 @@
 <br>Seekonk, Massachusetts
 <br>
 <br>• Monday-Thursday <strong>11am to 9pm</strong>;<br>• Friday & Saturday <strong>11 am to midnight</strong></p>
+<h2>Good Food on the Web</h2>
+<ul>
+	<li><a href="https://www.foodnetwork.com">The Food Network</a></li>
+	<li><a href="http://www.Epicurious.com/">Epicurious</a> </li>
+</ul>
+<h2>From Jen&rsquo;s Cookbook</h2>
+	<ul>
+		<li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
+		<li><a href="recipes/salmon.html">Garlic Salmon</a></li>
+		<li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
+		<li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
+	</ul>
+</ul>
 </body>
 </html>
