--- a/bistro/index.html
+++ b/bistro/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -36,7 +36,7 @@
 
 <body>
 	<h3><ul>
-		<li><a href="recipes/salmon.html"Recipes</a>
+		<li><a href="recipes/salmon.html">Recipes</a>
 		<li><a href="bgnews.html">News</a>
 		<li><a href="about.html">About</a>
 		<li><a href="glossary.html" target="_blank">Glossary</a>
@@ -65,6 +65,5 @@
 		<li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
 		<li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
 	</ul>
-</ul>
 </body>
 </html>
