--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 <body>
 	<ul>
-		<li><a href="recipes/salmon.html">Recipes</a>
+		<li><a href="recipes.html">Recipes</a>
 		<li><a href="bgnews.html">News</a>
 		<li><a href="about.html">About</a>
 		<li><a href="glossary.html" target="_blank">Glossary</a>
