--- a/bistro/recipes.html
+++ b/bistro/recipes.html
@@ -41,5 +41,6 @@
   <li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
   <li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
 </ul>
+<p><a href="../index.html">[Back to the home page]</a></p>
 </body>
 </html>
