--- a/resume/index.html
+++ b/resume/index.html
@@ -38,13 +38,15 @@
 			<li><a href="https://mailisproul.github.io/fid/bistro/">Sample Project</a>
 		</ul>
 	<h3>Work Samples</h3>
-	<p><img src="images/BBQ_graphic.png" alt="Event Infographic">
-		<img src="images/DisabilityPostercopy.png" alt="Event Poster">
-		<img src="images/esther_finalcopy.png" alt="Digital art of woman">
-		<img src="images/favicon1copy.png" alt="Art by Maili Ailsa Logo">
-		<img src="images/Flowercopy.png" alt="Digital flower design">
-		<img src="images/LeafLogoFinalcopy.png" alt="Leaf logo design">
-		<img src="images/PlantShroomsLogo.png" alt="mushroom logo">
+	<p><a href="bbq_graphic.html"><img src="images/BBQ_graphic.png" width="200" alt="Event Infographic"></a>
+		<a href="plantshrooms.html"><img src="images/PlantShroomsLogo.png" width="200" alt="mushroom logo">
+		<a href="esther.html"><img src="images/esther_finalcopy.png" width="200" alt="Digital art of woman">
+	<br>
+		<a href="favicon.html"><img src="images/favicon1copy.png" width="200"alt="Art by Maili Ailsa Logo">
+		<a href="flowers.html"><img src="images/Flowercopy.png" width="200" alt="Digital flower design">
+		<a href="leaflogo.html"><img src="images/LeafLogoFinalcopy.png" width="200" alt="Leaf logo design">
+
+
 
 	</p>
 </body>
