--- a/bistro/index.html
+++ b/bistro/index.html
@@ -89,12 +89,17 @@
 		<li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
 		<li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
 	</ul>
+<h2>Black Goose Pizza</h2>
+<a href="pizza.html"><img src="ordernow.gif" alt="order now" width="150"></a>
+<p>Build your custom pizza and we'll deliver it within an hour.</p>
+
 	<footer>
 <p>Please visit our social media pages</p>
 <p> <img src="icons/twitter.svg" alt="twitter">
 <img src="icons/facebook.svg" alt="facebook">
 <img src="icons/instagram.svg" alt="instagram">
 <img src="icons/github-icon.svg" alt="github"> </p>
+
 	</footer>
 </body>
 </html>
