--- a/bistro/gallery.html
+++ b/bistro/gallery.html
@@ -4,41 +4,7 @@
 <meta charset="UTF-8">
 <title>Black Goose Bistro Gallery</title>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
-body {
-background-color: #dbf3fa;
-margin: 0 10%;
-font-family: source sans pro;
-}
-h1 {
-text-align: center;
-font-family: serif;
-font-weight: normal;
-text-transform: uppercase;
-border-bottom: 3px solid #d1633c;
-margin-top: 30px;
-}
-h2 {
-color: #d1633c;
-font-size: 2em;
-}
-h3 {
-font-size: 1em;
-}
-h4 {
-font-size: 1em;
-}
-footer {
-  border-top: 1 px solid #57b1dc;
-  text-align: center;
-  padding-top: 1em;
-}
-footer img {
-  width: 40px;
-  height: 40px;
-  margin-left: .5em;
-  margin-right: .5em;
-}
+@import url(bistrostyles.css);
 </style>
 
 </head>
@@ -47,15 +13,7 @@ footer img {
 
 
 <h1>Black Goose Bistro Gallery</h1>
-<h4><ul>
-  <li><a href="index.html">Home</a>
-  <li><a href="gallery.html">Gallery</a>
-  <li><a href="recipes.html">Recipes</a>
-  <li><a href="bgnews.html">News</a>
-  <li><a href="about.html">About</a>
-  <li><a href="glossary.html" target="_blank">Glossary</a>
-</h4>
-</ul>
+
 <p>Not only is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 
 <h2>Our Baked Goods</h2>
@@ -94,7 +52,7 @@ srcset="responsivegallery/images/burgers-1200.jpg 1200w,
   </a>
   <br>Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
-<p><a href="index.html">[Back to Gallery]</a></p>
+<p><a href="index.html">[Back to Home]</a></p>
 
 </body>
 </html>
