--- a/bistro/about.html
+++ b/bistro/about.html
@@ -3,39 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Jen's Kitchen</title>
+  <title>About Black Goose Bistro</title>
   <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
-	body {
-	background-color: #dbf3fa;
-	margin: 0 10%;
-	font-family: source sans pro;
-	}
-	h1 {
-	text-align: center;
-	font-family: serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	border-bottom: 3px solid #d1633c;
-	margin-top: 30px;
-	}
-	h2 {
-	color: #d1633c;
-	font-size: 2em;
-	}
-	h3 {
-	font-size: 1em;
-	}
-	h4 {
-	font-size: 1em;
-	}
+@import url(bistrostyles.css);
 	</style>
 
 </head>
 
 <body>
 
-  <h1>About Jen&rsquo;s Kitchen </h1>
+  <h1>About Black Goose Bistro</h1>
 
   <p>The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. <i>Bon Appetit!</i></p>
 
