--- a/bistro/cooking.html
+++ b/bistro/cooking.html
@@ -4,24 +4,7 @@
 <meta charset="UTF-8">
 <title>Cooking with Nada Surf</title>
 <style>
-h1 {
-    color: orange;
-    border-bottom: 1px solid orange;
-  }
-  p {
-  font-size: large;
-  font-family: sans-serif;
-  margin-left: 100px;
-}
-h2 {
-    color: orange;
-    margin-left: 100px
-}
-img {
-  float: right;
-  margin: 0 12px;
-}
-
+@import url(bistrostyles.css);
 </style>
 </head>
 
@@ -41,12 +24,12 @@ img {
 <p>I wrote up a streamlined adaptation of his recipe that requires <em>much</em> less time and serves 6 people instead of <em>five</em> times that amount.</p>
 
 
-<h2 style="color: gray">The Main Course</h2>
+<h2>The Main Course</h2>
 
 <p>In addition to the smoky grilled salad, Daniel served tarragon cornish hens with a cognac cream sauce loaded with chanterelles and grapes, and wild rice with grilled ramps (wild garlicky leeks). Dinner was served close to midnight, but it was a party so nobody cared.</p>
 
 <p>We left that night (technically, early the next morning) with full bellies, new cooking tips, and nearly 5 hours of footage. I'm considering renaming the show "Cooking with Nada Surf". </p>
-
+ <p><a href="index.html">[Back to Home]</a></p>
 
 </body>
 </html>
