--- a/bistro/glossary.html
+++ b/bistro/glossary.html
@@ -4,35 +4,13 @@
 <meta charset="utf-8">
 <title>Glossary</title>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
-body {
-background-color: #dbf3fa;
-margin: 0 10%;
-font-family: source sans pro;
-}
-h1 {
-text-align: center;
-font-family: serif;
-font-weight: normal;
-text-transform: uppercase;
-border-bottom: 3px solid #d1633c;
-margin-top: 30px;
-}
-h2 {
-color: #d1633c;
-font-size: 2em;
-}
-h3 {
-font-size: 1em;
-}
-h4 {
-font-size: 1em;
-}
+@import url(bistrostyles.css);
 </style>
 </head>
 <body>
 
 <h1 id="top">Glossary</h1>
+<h3><p><a href="index.html">[Back to Home]</a></p></h3>
 
 <p><a href="#startA">A</a> |<a href="#startB">B</a> | <a href="#startC">C</a> |<a href="#startD">D</a>| <a href="#startE">E</a> | <a href="#startF">F</a> | <a href="#startG">G</a> | <a href="#startH">H</a> | <a href="#startI">I</a> | <a href="#startJ">J</a> | <a href="#startL">L</a> | <a href="#startM">M</a> | <a href="#startN">N</a> | <a href="#startO">O</a> |<a href="#startP">P</a> |<a href="#startQ">Q</a> | <a href="#startR">R</a> | <a href="#startS">S</a> | <a href="#startT">T</a> | <a href="#startU">U</a> | <a href="#startV">V</a> | <a href="#startW">W</a> | <a href="#startX">X</a></p>
 
@@ -278,6 +256,6 @@ font-size: 1em;
 <dt>XML</dt>
 <dd>eXtensible Markup Language; a metalanguage for creating custom markup languages</dd>
 </dl>
-
+<p><a href="index.html">[Back to Home]</a></p>
 </body>
 </html>
