--- a/bistro/index.html
+++ b/bistro/index.html
@@ -5,41 +5,7 @@
 	<meta charset="utf-8">
 	<title>Black Goose Bistro</title>
 	<style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
-	body {
-	background-color: #dbf3fa;
-	margin: 0 10%;
-	font-family: source sans pro;
-	}
-	h1 {
-	text-align: center;
-	font-family: serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	border-bottom: 3px solid #d1633c;
-	margin-top: 30px;
-	}
-	h2 {
-	color: #d1633c;
-	font-size: 2em;
-	}
-	h3 {
-	font-size: 1em;
-	}
-	h4 {
-	font-size: 1em;
-	}
-	footer {
-		border-top: 1 px solid #57b1dc;
-		text-align: center;
-		padding-top: 1em;
-	}
-	footer img {
-		width: 40px;
-		height: 40px;
-		margin-left: .5em;
-		margin-right: .5em;
-	}
+@import url(bistrostyles.css);
 	</style>
 
 </head>
@@ -56,15 +22,16 @@
   <path d="M89.1 27.9s-1.6 1.3-1.8 3.4C87 33.4 86 37 87.2 40c2 5 4.9 8.7 4.9 8.7s2.9 4.7 4.8 6.3c1.8 1.6 5.8 6.3 5.8 11.6 0 2.9-.3 9.5-1.1 11.6-.8 2.1.2 8.1-2.6 11-2.8 2.9-5 4.7-5.5 6-.5 1.3-5.3 4.2-6.6 6-1.3 1.8-7.1 8.4-7.1 8.4l-1.3 12.3 2.6 2.9 6.6 1.3 2.8.4s-4.2.7-1.5 1.5 2.9 1.8 2.9 1.8l-6-.5 1.6 2.9h-1.8c-1.8 0-5.3-3.2-5.3-3.2s-7.1-1.8-7.1-3.2c0-1.3 1.6-1.6 1.6-2.9 0-2.8 1.3-.2 1.1-12.1 0 0-2.9-2.1-4.5-.8s-1.6 2.9-5 3.4-9.2-.3-9.2-.3-1.3 7.1-1.6 8.1c-.3 1.1 0 2.9 0 2.9l2.4 1s5.4 1.1 7.5 1.3c2.1.3 5.6 2.6 5.6 2.6s-3.9-.3-2.9 2.9c.4 1.1-5.8-3.2-5.8-1.6s1.1 1.6-1.1 1.6c-2.1 0-2.6-1.6-4.7-2.9-2.1-1.3-3.9-2.9-4.7-3.4-.8-.5-1.3-.8-1.3-2.1s1.6-2.4 1.8-4.7c.3-2.4 2.9-5.3 1.1-6.3-1.8-1.1-2.9-.3-7.1-3.9-4.2-3.7-1.8-3.9-5-8.7-3.2-4.7-1.3-8.1-7.1-8.4-20.8-1.1-9.5-4.2-10.8-4.5-1.3-.3-2.1-1.6-2.6-2.6-.5-1.1 1.1-1.6 7.9-.8 0 0 3.7-3.2 11.3-3.9 3-.3 6.3-4.2 11-6 4.7-1.8 8.9-1.6 14.4-4.8 4-2.3 12.2-4.7 12.2-4.7s6-5.3 5.3-8.1C82.3 53.2 79 46 79 46s-2.2-5.6-2.2-10.6.8-11.6 2.1-13.9c1.3-2.4 2.1-6 8.4-6.6 6.3-.5 8.7 3.7 8.7 3.7s.5 1.6 1.4 2.1c.8.5 11.1 1.3 10.2 3.6-.4 1 .3 1.1-1.3 1.8-1.6.8-7.4.5-8.9.5-1.8.2-8.3 1.3-8.3 1.3z"/>
 </svg> <br>Black Goose Bistro</h1>
 <body>
-	<ul>
-		<li><a href="index.html">Home</a>
-		<li><a href="gallery.html">Gallery</a>
-		<li><a href="recipes.html">Recipes</a>
-		<li><a href="bgnews.html">News</a>
-		<li><a href="about.html">About</a>
-		<li><a href="glossary.html" target="_blank">Glossary</a>
-
-	</ul>
+<h3><ul>
+	<li>	<a href="index.html">Home</a>
+	<li>	<a href="gallery.html">Gallery</a>
+	<li>	<a href="recipes.html">Recipes</a>
+	<li>	<a href="bgnews.html">News</a>
+	<li>	<a href="about.html">About</a>
+	<li>	<a href="pizza.html">Order a Pizza</a>
+	<li>	<a href="glossary.html" target="_blank">Glossary</a>
+	<li><a href="cooking.html">Cooking with Daniel</a>
+</ul></h3>
 <h2>The Restaurant</h2>
 <p>The <em>Black Goose Bistro</em> offers casual lunch and dinner fare in a relaxed atmosphere.
 <br>The menu changes regularly to highlight the freshest local ingredients.</p>
