--- a/bistro/recipes/pasta/couscous.html
+++ b/bistro/recipes/pasta/couscous.html
@@ -5,31 +5,8 @@
   <meta charset="utf-8">
   <title>Jen's Kitchen: Couscous Salad with Peas and Mint</title>
   <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap');
-	body {
-	background-color: #dbf3fa;
-	margin: 0 10%;
-	font-family: source sans pro;
-	}
-	h1 {
-	text-align: center;
-	font-family: serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	border-bottom: 3px solid #d1633c;
-	margin-top: 30px;
-	}
-	h2 {
-	color: #d1633c;
-	font-size: 2em;
-	}
-	h3 {
-	font-size: 1em;
-	}
-	h4 {
-	font-size: 1em;
-	}
-	</style>
+  @import url(../../bistrostyles.css);
+  </style>
 
 </head>
 
