--- a/leaflogo.html
+++ b/leaflogo.html
@@ -5,14 +5,13 @@
 	<meta charset="utf-8">
   <title>Work Sample</title>
 	<style>
-	h1, body	{text-align: center;}
-
+	@import url(resume.css);
 	</style>
 </head>
 
 <body>
 	<h1>Website Logo</h1>
-<img src="images/leaflogo.svg" width="1000" alt="Website Logo">
+<img src="images/leaflogofinalcopy.png" class="fullsize" alt="Website Logo" style="background-color: #fff">
 <h2><a href="index.html">Home</a></h2>
 </body>
 </html>
