--- a/resume/plantshrooms.html
+++ b/resume/plantshrooms.html
@@ -5,14 +5,13 @@
 	<meta charset="utf-8">
   <title>Work Sample</title>
 	<style>
-	h1, body	{text-align: center;}
-
+	@import url(resume.css);
 	</style>
 </head>
 
 <body>
 	<h1>Logo Design</h1>
-<img src="images/PlantShroomsLogo.png" width="1000" alt="Mushroom Logo">
+<img src="images/PlantShroomsLogo.png" class="fullsize" alt="Mushroom Logo">
 <h2><a href="index.html">Home</a></h2>
 </body>
 </html>
