--- a/resume/bbq_graphic.html
+++ b/resume/bbq_graphic.html
@@ -3,17 +3,15 @@
 
 <head>
 	<meta charset="utf-8">
-  <title> Maili Sproul Resume</title>
+  <title>Work Sample</title>
 	<style>
-	h1, body	{text-align: center;}
-
+	@import url(resume.css);
 	</style>
 </head>
 
 <body>
 	<h1> Barbeque Event Infographic</h1>
-<a href="bbq_graphic.html">
-	<img src="images/BBQ_graphic.png" width="1000" alt="Event Infographic">
+<img src="images/BBQ_graphic.png" class="fullsize" alt="Event Infographic">
 <h2><a href="index.html">Home</a></h2>
 </body>
 </html>
