--- a/resume/flowers.html
+++ b/resume/flowers.html
@@ -5,14 +5,13 @@
 	<meta charset="utf-8">
   <title>Work Sample</title>
 	<style>
-	h1, body	{text-align: center;}
-
+	@import url(resume.css);
 	</style>
 </head>
 
 <body>
 	<h1>Digital Flower Drawing</h1>
-<img src="images/Flowercopy.png" width="1000" alt="Digital Flower Drawing">
+<img src="images/Flowercopy.png" class="fullsize" alt="Digital Flower Drawing">
 <h2><a href="index.html">Home</a></h2>
 </body>
 </html>
