--- a/resume/index.html
+++ b/resume/index.html
@@ -4,10 +4,13 @@
 <head>
 	<meta charset="utf-8">
   <title> Maili Sproul Resume</title>
+	<style>
+	@import url(resume.css);
+	</style>
 </head>
-<h1>Welcome!</h1>
+<h1>Art by Maili Ailsa</h1>
 <body>
-	My name is Maili Sproul (first name pronounced like Molly). I am currently a student in college working towards my graphic design degree. I've been doing art traditionally since 2014. For the past few years, I've mainly done painting with watercolor and acrylic paint. But more recently I've delved into digital art and design. Here you will find some of my work, along with my skills and experience!
+	<p class="intro">My name is Maili Sproul (first name pronounced like Molly). I am currently a student in college working towards my graphic design degree. I've been doing art traditionally since 2014. For the past few years, I've mainly done painting with watercolor and acrylic paint. But more recently I've delved into digital art and design. Here you will find some of my work, along with my skills and experience!</p>
 	<h2>Skills</h2>
 	<ul>
 		<li>Illustration
@@ -30,24 +33,23 @@
 			<li>Procreate
 			<li>InDesign</li>
 		</ul>
-	<h3>Social Media and Web Presence</h3>
-		<ul>
+	<h2>Social Media and Web Presence</h2>
+		<ul class="links">
 			<li><a href="https://www.instagram.com/art.by.maili.ailsa/">Instagram</a>
 			<li><a href="https://artby.mailiailsa.com/">Online Store</a>
 			<li><a href="https://www.facebook.com/art.by.maili.ailsa">Facebook Page</a>
-			<li><a href="https://mailisproul.github.io/fid/bistro/">Sample Project</a>
+			<li><a href="mailto:art@mailiailsa.com">Email me!</a>
 		</ul>
-	<h3>Work Samples</h3>
-	<p><a href="bbq_graphic.html"><img src="images/BBQ_graphic.png" width="200" alt="Event Infographic"></a>
-		<a href="plantshrooms.html"><img src="images/PlantShroomsLogo.png" width="200" alt="mushroom logo">
-		<a href="esther.html"><img src="images/esther_finalcopy.png" width="200" alt="Digital art of woman">
-	<br>
-		<a href="favicon.html"><img src="images/favicon1copy.png" width="200"alt="Art by Maili Ailsa Logo">
-		<a href="flowers.html"><img src="images/Flowercopy.png" width="200" alt="Digital flower design">
-		<a href="leaflogo.html"><img src="images/LeafLogoFinalcopy.png" width="200" alt="Leaf logo design">
+	<h2>Work Samples</h2>
+	<div class="gallery"><a href="bbq_graphic.html"><img src="images/BBQ_graphic.png" width="200" alt="Event Infographic"></a>
+		<a href="plantshrooms.html"><img src="images/PlantShroomsLogo.png" width="200" alt="mushroom logo"></a>
+		<a href="esther.html"><img src="images/esther_finalcopy.png" width="200" alt="Digital art of woman"></a>
+		<a href="https://mailisproul.github.io/fid/bistro/" target="_blank"><img src="images/blackgoosemockup.png" width="200"alt="Sample Project"></a>
+		<a href="flowers.html"><img src="images/Flowercopy.png" width="200" alt="Digital flower design"></a>
+		<a href="leaflogo.html"><img src="images/LeafLogoFinalcopy.png" width="200" alt="Leaf logo design"></a>
 
+	</div>
 
-
-	</p>
 </body>
+
 </html>
